--- a/assets/scss/partials/content/list.scss
+++ b/assets/scss/partials/content/list.scss
@@ -225,7 +225,8 @@
     .list-single-col {
         display: block;
         width: 776px;
-        padding: 0 24% 0 16%;
+        // padding: 0 24% 0 16%;
+        margin: 0 auto;
         
 
         .recentf {
